# mimalloc-safe

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
example/: .gitignore  Cargo.toml  index.d.ts  package.json
example/src/: lib.rs
libmimalloc-sys/: CHANGELOG.md  Cargo.toml  build.rs
libmimalloc-sys/src/: extended.rs
libmimalloc-sys/sys-test/: Cargo.toml  build.rs
libmimalloc-sys/sys-test/src/: main.rs
src/: lib.rs
