[package]
name = "libmimalloc-sys-test"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2018"
description = "Bindings test for libmimalloc-sys"
license = "MIT"
publish = false

[features]
secure = ["libmimalloc-sys2/secure"]
extended = ["libmimalloc-sys2/extended"]

[dependencies]
libmimalloc-sys2 = { path = "..", features = ["extended"] }
libc = "0.2"

[build-dependencies]
ctest2 = "0.4"
